--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -474,12 +474,19 @@
     .front, .back {
 
         .flip-container {
+            -moz-perspective: 1000px;
+            -ms-perspective: 1000px;
+            -webkit-perspective: 1000px;
             perspective: 1000px;
             height: 100%;
         }
 
         .flipper {
+            -moz-transition: 0.6s;
+            -o-transition: 0.6s;
+            -webkit-transition: 0.6s;
             transition: 0.6s;
+            -webkit-transform-style: preserve-3d;
             transform-style: preserve-3d;
             position: relative;
         }
@@ -494,15 +501,26 @@
         }
         //The translateZ(1px) part is added to fix half card not being clickable bug: http://stackoverflow.com/questions/8446189/180-degree-rotated-div-is-only-clickable-from-one-side
         .front {
-            z-index: 2;
+            /*z-index: 2;
             -moz-transform: rotateX(0deg) translateZ(1px);
             -ms-transform: rotateX(0deg) translateZ(1px);
             -o-transform: rotateX(0deg) translateZ(1px);
             -webkit-transform: rotateX(0deg) translateZ(1px);
-            transform: rotateX(0deg) translateZ(1px);
+            transform: rotateX(0deg) translateZ(1px);*/
+            z-index: 2;
+            -moz-transform: rotateX(0deg);
+            -ms-transform: rotateX(0deg);
+            -o-transform: rotateX(0deg);
+            -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
         }
 
         .back {
+            /*-moz-transform: rotateX(-180deg) translateZ(1px);
+            -ms-transform: rotateX(-180deg) translateZ(1px);
+            -o-transform: rotateX(-180deg) translateZ(1px);
+            -webkit-transform: rotateX(-180deg) translateZ(1px);
+            transform: rotateX(-180deg) translateZ(1px);*/
             -moz-transform: rotateX(-180deg) translateZ(1px);
             -ms-transform: rotateX(-180deg) translateZ(1px);
             -o-transform: rotateX(-180deg) translateZ(1px);
@@ -527,7 +545,19 @@
 
     .back {
         .flip-container .flipper {
-            transform: rotateX(-180deg);
+            -moz-transform: rotateX(-180deg);
+            -o-transform: rotateX(-180deg);
+            -webkit-transform: rotateX(-180deg);
+            transform: rotateX(-180deg); // Not all corresponding rules implemented since it should work differently on IE
+            -ms-transform: none;
+        }
+
+        .flip-container .back {
+            -ms-transform: rotateX(0deg); // Not all corresponding rules implemented since it should work differently on IE
+        }
+
+        .flip-container .front {
+            -ms-transform: rotateX(-180deg); // Not all corresponding rules implemented since it should work differently on IE
         }
     }
 
